--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^5.1.0",
     "express-handlebars": "^8.0.1",
     "knex": "^3.1.0",
-    "mysql2": "^3.14.1"
+    "mysql2": "^3.14.1",
+    "pg": "^8.16.0"
   }
 }
