--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "mysql2": "^3.14.1",
+    "node-cron": "^4.1.0",
     "nodemailer": "^7.0.3",
     "pg": "^8.16.0"
   }
